change max-height and max-width for responsive hero to avoid horizontal scroll bar for min-width: 87.5em and illustrator credit overlap for max-width: 28.125em

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1144,7 +1144,7 @@ aside.column.more-content .item-summary {
 
 .wide-hero.responsive-hero {
 	width: 1400px;
-	max-width: 1400px;
+	max-width: 1365px;
 	margin: -12px -200px 0 -200px;
 }
 
@@ -1153,7 +1153,7 @@ aside.column.more-content .item-summary {
 @media only screen and (max-width: 28.125em) { /* 450px */
 
 .wide-hero.responsive-hero {
-	max-height: 300px;
+	max-height: 315px;
 }
 
 .wide-hero.responsive-hero img {
